--- a/webdev_lab1.html
+++ b/webdev_lab1.html
@@ -2,13 +2,19 @@
 <html lang="en">
 <head>
   <meta charset="utf-8">
-  <title>Internet Technologies and Web Design</title>
+  <title>Welcome to my first Website</title>
 </head>
 <body>
-  <p>&amp; Hello world. This is my first website!</p>
+<html>
+  <!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+</head>
+  <p>Hello world. This is my first website!</p>
   <p>Personal Information</p>
   <p>Name : DULAPALLI KIRAN KUMAR.<p>
-  <p>From : Indian<p>
+  <p>From : India<p>
   <p>I graduated in Mecanical engineering and i really like to learn Coding.<p>
 </body>
 </html>
