--- a/webdev_lab1.html
+++ b/webdev_lab1.html
@@ -4,6 +4,7 @@
   <meta charset="utf-8">
   <title>Welcome to my first Website</title>
 </head>
+</body>
   <p>Hello world. This is my first website!</p>
   <p>Personal Information</p>
   <p>Name : DULAPALLI KIRAN KUMAR.<p>
