--- a/webdev_lab1.html
+++ b/webdev_lab1.html
@@ -6,7 +6,7 @@
 </head>
 </body>
   <p>Hello world. This is my first website!</p>
-  <p>Personal Information</p>
+  <p>Personal Information<p>
   <p>Name : DULAPALLI KIRAN KUMAR.<p>
   <p>From : India<p>
   <p>I graduated in Mecanical engineering and i really like to learn Coding.<p>
