--- a/webdev_lab1.html
+++ b/webdev_lab1.html
@@ -9,6 +9,6 @@
   <p>Personal Information<p>
   <p>Name : DULAPALLI KIRAN KUMAR.<p>
   <p>From : India<p>
-  <p>I graduated in Mecanical engineering and i really like to learn Coding.<p>
+  <p>I graduated in Mecanical engineering and i think the future is Coding.<p>
 </body>
 </html>
