--- a/webdev_lab1.html
+++ b/webdev_lab1.html
@@ -1,14 +1,14 @@
 <!DOCTYPE html>
-<html lang="en">
-<head>
-  <meta charset="utf-8">
-  <title>Welcome to my first Website</title>
-</head>
-</body>
-  <p>Hello world. This is my first website!</p>
-  <p>Personal Information<p>
-  <p>Name : DULAPALLI KIRAN KUMAR.<p>
-  <p>From : India<p>
-  <p>I graduated in Mecanical engineering and i think the future is Coding.<p>
-</body>
+<html lang="en-us">
+   <head>
+    <meta charset="utf-8">
+    <title>Welcome to my first Website</title>
+   </head>
+   <body>
+    <p>Hello world. This is my first website!</p>
+    <p>Personal Information<p>
+    <p>Name : DULAPALLI KIRAN KUMAR.<p>
+    <p>From : India<p>
+    <p>I graduated in Mecanical engineering and i think the future is Coding.<p>
+  </body>
 </html>
